# lerobot

./: .gitignore  CLAUDE.md  README.md
coffee_machine_controller/main/: CMakeLists.txt  Kconfig.projbuild  command_handler.c  command_handler.h  controller_main.c  espnow_controller.c  espnow_controller.h  motor_controller.c  motor_controller.h  uart_controller.c  uart_controller.h
firmware/esp32_servo_control/: CMakeLists.txt  sdkconfig.defaults
firmware/esp32_servo_control/main/: CMakeLists.txt  espnow_sender.c  espnow_sender.h  main.c  servo.c  servo.h
